# AlphaVisionPro

./: .gitignore  README.md  build.gradle.kts  gradle.properties  gradlew  gradlew.bat  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/com/alpha/vision/pro/gallery/: AlphaVisionApp.kt  MainActivity.kt
app/src/main/java/com/alpha/vision/pro/gallery/di/: AppModule.kt  DataModule.kt
app/src/main/java/com/alpha/vision/pro/gallery/navigation/: AppNavGraph.kt
app/src/main/res/drawable/: ic_custom_app_logo.xml
app/src/main/res/values/: strings.xml  themes.xml
core/data/: build.gradle.kts
core/data/src/main/cpp/: CMakeLists.txt  image_processor.cpp  image_processor.h  jni_bridge.cpp
core/data/src/main/java/com/alpha/vision/pro/gallery/data/db/: MediaDatabase.kt
core/data/src/main/java/com/alpha/vision/pro/gallery/data/di/: NativeModule.kt
core/data/src/main/java/com/alpha/vision/pro/gallery/data/native/: NativeEditServiceImpl.kt  NativeImageProcessor.kt
core/data/src/main/java/com/alpha/vision/pro/gallery/data/nativelib/: NativeEditServiceImpl.kt  NativeImageProcessor.kt
core/data/src/main/java/com/alpha/vision/pro/gallery/data/repository/: MediaRepositoryImpl.kt  VaultRepositoryImpl.kt
core/designsystem/: build.gradle.kts
core/domain/: build.gradle.kts
features/editor/: build.gradle.kts
features/gallery/: build.gradle.kts
features/settings/: build.gradle.kts
features/vault/: build.gradle.kts
gradle/: libs.versions.toml
(+37 files in other folders)
